# sbb-flip-clock

./: .gitignore  README.md  TODO.md  button_demo.py  clock.py  config.json.example  demo.py  demo_mac.py  demo_open_wake_words.py  docs.md  main.py  main_beni.py  pyproject.toml  sbb-flip-clock.service  shutdown_demo.py  test_mac.py  test_raspberry.py  test_record_raspberry.py  test_shutdown.py  wake_word_detector.py
resources/models/custom/: hey_clock.onnx  hey_clock.tflite  hey_clock_float16.tflite  hey_clock_small_v1.onnx  hey_clock_tiny_v1.onnx  hey_clock_v1.onnx  tic_toc.onnx  tic_toc.tflite  tic_toc_float16.tflite  tick_tock_v1.onnx  tick_tock_v2.onnx  tick_tock_v3.onnx
