[project]
name = "sbb-flip-clock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyserial==3.5",
    "gpiozero==1.5.1",
    "pyaudio==0.2.14",
    "numpy==2.2.6",
    # "tflite-runtime==2.14.0",
    "openwakeword==0.6.0", # Requires the "resources" directory from the 0.5.1 version or manually specified model path
    "rich==14.0.0",
    # "speexdsp_ns==0.1.2", # Linux only
    "resampy>=0.4.3",
]
[tool.ruff]
exclude = ["sbb_fallblatt"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
