[project]
name = "sbb-flip-clock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyserial==3.5",
    "gpiozero==1.5.1",
    "miniaudio>=1.59",
    "numpy==2.2.6",
    "rich==14.0.0",
    "livekit-wakeword[listener]>=0.2.0",
]
[tool.ruff]
exclude = ["sbb_fallblatt"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
